--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -81,7 +81,7 @@
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>WANDERLUST</h3>
                         <p>Web platform built in 48 hours from idea to product that allows you to create pinboards and upload video and image files. Winning project of innovation in Laboratoria's X Project challenge.</p>
-                        <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#wandelust-modal">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--light col-xs-12 col-md-6">
                         <h3>PINTEREST</h3>
@@ -103,6 +103,74 @@
                 </div>
             </div>
         </section>
+        <div class="modal fade" id="wandelust-modal" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="container">
+                        <div class="modal-header row">
+                            <div class="col-md-12">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h3 class="modal-title">WANDERLUST</h3>
+                            </div>
+                        </div>
+                        <div class="modal-body row">
+                            <div class="col-md-4 col-xs-12">
+                                <h4>Client</h4>
+                                <p>Laboratoria</p>
+                                <h4>What I did</h4>
+                                <p>Create the concept and design for the platform. I developed the login site and refactored the JS code.</p>
+                                <h4>Technologies</h4>
+                                <ul>
+                                    <li>Vanilla JavaScript</li>
+                                    <li>CSS3</li>
+                                    <li>HTML5</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
+                                </ul>
+                                <h4>Acknowledgements</h4>
+                                <p>Special Mention for Tech Innovation in Laboratoria.</p>
+                            </div>
+                            <div class="col-md-8 col-xs-12">
+                                <div class="col-md-12">
+                                    <p>This was based on the X Project, a Laboratoria challenge in which we'd have to come up with a concept for a project and write the code using JavaScript events we hadn't seen in class in 48 hours.</p>
+                                    <p>Requirements:</p>
+                                    <ol>
+                                        <li>Use two events that we had seen in class</li>
+                                        <li>Use two new events</li>
+                                        <li>Use callbacks</li>
+                                    </ol>
+                                </div>
+                                <div class="col-md-12">
+                                    <h4>PROCESS</h4>
+                                    <h5>01. Organization</h5>
+                                    <p>We developed this project in pairs so if we wanted to deliver on time we needed to have a great organization system. We indicated eachother's tasks based on our agility so we wouldn't waste any minute of our time. We used Trello to keep our tasks in order and we set up deadlines to check on our progress and make the changes we needed to make.</p>
+                                    <h5>02. Research</h5>
+                                    <p>I came up with this proposal on my search for a social network that focused on sharing travelers experiences online. I made a quick sketch on paper with the structure I had in mind so we could begin with the development process.</p>
+                                    <h5>03. Development</h5>
+                                    <p>The selected events we used that we saw in class were:</p>
+                                    <ol>
+                                        <li>OnmouseOver</li>
+                                        <li>OnmouseOut</li>
+                                    </ol>
+                                    <p>The events that we didn't see in class that we used were:</p>
+                                    <ol>
+                                        <li>OnmouseMove</li>
+                                        <li>DragOver</li>
+                                        <li>Drop</li>
+                                    </ol>
+                                    <strong><p class="text-center">To enter the platform please use the email itsandromeda@gmail.com and the password 321</p></strong>
+
+                                </div>
+                                <div class="col-md-12 modal__btns">
+                                    <a class="modal-btn" href="https://github.com/itsandromeda/Wanderlust-Proyecto-X" target="_blank">Code</a>
+                                    <a class="modal-btn" href="https://itsandromeda.github.io/Wanderlust-Proyecto-X/" target="_blank">Demo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <section id="about">
             <div class="container-fluid">
                 <div class="row">
