--- a/src/index.html
+++ b/src/index.html
@@ -263,7 +263,7 @@
                                 </div>
                                 <div class="col-md-12">
                                     <h4>PROCESO</h4>
-                                    <p><strong>1° Hito:</strong></p>
+                                    <h5>1° Hito:</h5>
                                     <ul>
                                         <li>-Clonar el proyecto</li>
                                         <li>-Instalar con npm todas las dependencias</li>
@@ -273,14 +273,14 @@
                                         <li>-Pantalla 2: Se debe poder ingresar un teléfono y poder aceptar los términos y condiciones. El botón de continuar sólo se activa cuando un teléfono es ingresado y los términos son aceptados. Cuando se hace click en continuar, el sistema debe enviar un request al API para registrar el teléfono y generar el código. Tener en cuenta que el API no permite más de 2 registros del mismo teléfono a la vez.</li>
                                     </ul>
                                     <br>
-                                    <p><strong>2° Hito:</strong></p>
+                                    <h5>2° Hito:</h5>
                                     <ul>
                                         <li>-Pantalla 3: Debe validar el código previamente generado en la pantalla anterior, el código es enviado mediante el API. Al ingresar un código válido la pantalla, salta a la siguiente pantalla. Debe haber un contador que a los 21 segundos llame al API para ingresar un nuevo código e invalidar el anterior.</li>
                                         <li>-Pantalla 4: Se deben poder ingresar mis datos de usuario. Sólo cuando todos mis datos están ingresados se debe activar el botón amarillo. Deben haber validaciones básicas (email) y la contraseña no debe poderse ver. Al hacer click sobre el botón, debe enviarse los datos al API y cuando regresa, debe pasar a la pantalla 5.</li>
                                         <li>-Pantalla 5: A los 3 segundos de mostrar esta pantalla, debe pasar a la siguiente.</li>
                                     </ul>
                                     <br>
-                                    <p><strong>3° Hito:</strong></p>
+                                    <h5>3° Hito:</h5>
                                     <ul>
                                         <li>-Pantalla 6: Se debe poder registrar una nueva tarjeta de crédito. Sólo se debe poder ingresar 16 números en el input de tarjeta. Sólo se debe poder ingresar meses (01 al 12). Sólo debe poder ingresar años futuros (del 17 al 24). El botón de registro sólo se activa si todos los campos han sido ingresados. Al hacer click en el botón nos manda a la página 7.</li>
                                         <li>-Pantalla 7: Se debe proder ingresar la contraseña. La contraseña debe ser de 4 dígitos. El botón de registro solo se activa si la contraseña ha sido ingresada. Al hacer click en el botón, debe enviar los datos al API y cuando regresa debe pasar a la pantalla final.
