--- a/public/index.html
+++ b/public/index.html
@@ -463,7 +463,7 @@
             </section>
         </header>
         <div id="contact" class="download">
-            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/Resume.pdf">
+            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/curriculum.jpg">
                 <p>Escríbeme: itsandromeda@gmail.com</p>
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Descarga mi CV</button>
