--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
                     <p class="hidden-xs">FRONT - END DEVELOPER, LIMA - PERÚ</p>
-                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/Resume.pdf">
+                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/curriculum.jpg">
                         <button class="btn home__button" type="submit">Descargar CV</button>
                     </form>
                     <div id="jump" class="home__more animate-flicker hidden-sm hidden-md hidden-lg">
@@ -464,7 +464,7 @@
         </header>
         <div id="contact" class="download">
             <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/curriculum.jpg">
-                <p>Escríbeme: itsandromeda@gmail.com</p>
+                <p>Escríbeme: itsandromeda@gmail.com</p> 
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Descarga mi CV</button>
                 <i class="fa fa-long-arrow-up animate-flicker"></i>
