--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -34,7 +34,7 @@
 <body>
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
-            <span class="nav-text">ANNIA J. FLORES | FRONT - END DEVELOPER JR.</span>
+            <span class="nav-text">ANNIA J. FLORES | UX DEVELOPER JR.</span>
             <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="My email"><i class="fa fa-envelope-o"></i> SAY HELLO! :)</a>
         </div>
     </nav>
