--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Laboratoria graduate Front-end Developer in Lima, Peru.</title>
+    <title>Annia J. Flores | Laboratoria graduate UX Developer in Lima, Peru.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
-    <meta property="og:title" content="Annia J. Flores, Front-end Developer">
+    <meta property="og:title" content="Annia J. Flores, UX Developer">
     <meta property="og:site_name" content="Portfolio">
-    <meta property="og:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
+    <meta property="og:description" content="Laboratoria graduate UX Developer in Lima, Peru.">
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
-    <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
-    <meta name="twitter:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
+    <meta name="twitter:title" content="Annia J. Flores, UX Developer">
+    <meta name="twitter:description" content="Laboratoria graduate UX Developer in Lima, Peru.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <!-- Font Awesome -->
@@ -62,7 +62,7 @@
                     <div class="home__logo">
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
-                    <p class="hidden-xs">FRONT - END DEVELOPER, LIMA - PERU</p>
+                    <p class="hidden-xs">UX DEVELOPER, LIMA - PERU</p>
                     <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/resume.jpg">
                         <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
@@ -228,12 +228,13 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                <p>Hi! My name is Annia, I'm a <em>front-end developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
-                                <p>I'm currently looking to become a part of a team of entrepreneurs and visionaries determined to change the world with technology. I'm a very passionate and commited person with the goals I set to myself and those are some of the things that characterize me, I believe I would fit in perfectly in a design-driven team that works with agile methodologies, since it's what I've been trained for in the past months.</p>
+                                <p>Hi! My name is Annia, I'm a <em>UX developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
+                                <p>I'm currently looking to become a part of a team of entrepreneurs and visionaries determined to change the world with design and technology. I'm a very passionate and commited person with the goals I set to myself and those are some of the things that characterize me, I believe I would fit in perfectly in a design-driven team that works with agile methodologies, since it's what I've been trained for in the past months.</p>
                                 <p>My performance in Laboratoria has been pretty good, I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to and I think this kind of mindset really helped me get through the program with a few acknowledgements.</p>
+                                <p>I have a total of 6 months of experience developing web projects for companies such as Scotiabank, DepoSeguro and more.</p>
 
                                 <h3>Interests</h3>
-                                <p>I'm really interested in social issues and entrepreneurship, on the other hand UX is something that has really caught my attention and I'm taking courses in some of my free time to learn more about it even though my main focus is web development. On that side I'm looking forward to learn about front-end frameworks to develop a quicker work pace as well as the best practices on the field. Laboratoria is still a huge support in my career as a developer and I'll continue to learn with them until I get a fullstack knowledge in JavaScript.</p>
+                                <p>I'm really interested in UX Design, social issues and entrepreneurship. Laboratoria is still a huge support in my career as a UX Designer and Web Developer since I'm taking courses with them to better my knowledge in the fields.</p>
                                 <p>Apart from that I have a huge love for music, design, photography and one of the platforms I use to share some of my other hobbies is Instagram, so you can find more of the things that inspire me right there.</p>
                             </div>
                             <div class="about-content col-md-5">
