--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Front-end Developer egresada de Laboratoria en Lima, Perú.</title>
+    <title>Annia J. Flores | UX Developer egresada de Laboratoria en Lima, Perú.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
