--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Laboratoria graduate UX Developer in Lima, Peru.</title>
+    <title>Annia J. Flores | Laboratoria graduate Front-end Developer in Lima, Peru.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
-    <meta property="og:title" content="Annia J. Flores, UX Developer">
+    <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portfolio">
-    <meta property="og:description" content="Laboratoria graduate UX Developer in Lima, Peru.">
+    <meta property="og:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
-    <meta name="twitter:title" content="Annia J. Flores, UX Developer">
-    <meta name="twitter:description" content="Laboratoria graduate UX Developer in Lima, Peru.">
+    <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
+    <meta name="twitter:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <!-- Font Awesome -->
@@ -34,7 +34,7 @@
 <body>
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
-            <span class="nav-text">ANNIA J. FLORES | UX DEVELOPER JR.</span>
+            <span class="nav-text">ANNIA J. FLORES | FRONT-END DEVELOPER JR.</span>
             <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="My email"><i class="fa fa-envelope-o"></i> SAY HELLO! :)</a>
         </div>
     </nav>
@@ -62,8 +62,8 @@
                     <div class="home__logo">
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
-                    <p class="hidden-xs">UX DEVELOPER, LIMA - PERU</p>
-                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/resume.jpg">
+                    <p class="hidden-xs">FRONT-END DEVELOPER, LIMA - PERU</p>
+                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia_front-end_eng">
                         <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
                     <div id="jump" class="home__more animate-flicker hidden-sm hidden-md hidden-lg">
@@ -228,10 +228,9 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                <p>Hi! My name is Annia, I'm a <em>UX developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
+                                <p>Hi! My name is Annia, I'm a <em>Front-end developer</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
                                 <p>I'm currently looking to become a part of a team of entrepreneurs and visionaries determined to change the world with design and technology. I'm a very passionate and commited person with the goals I set to myself and those are some of the things that characterize me, I believe I would fit in perfectly in a design-driven team that works with agile methodologies, since it's what I've been trained for in the past months.</p>
                                 <p>My performance in Laboratoria has been pretty good, I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to and I think this kind of mindset really helped me get through the program with a few acknowledgements.</p>
-                                <p>I have a total of 6 months of experience developing web projects for companies such as Scotiabank, DepoSeguro and more.</p>
 
                                 <h3>Interests</h3>
                                 <p>I'm really interested in UX Design, social issues and entrepreneurship. Laboratoria is still a huge support in my career as a UX Designer and Web Developer since I'm taking courses with them to better my knowledge in the fields.</p>
@@ -253,6 +252,8 @@
                                     <li>npm (package manager)</li>
                                     <li>SEO</li>
                                     <li>HTTP JSON &amp; API requests</li>
+                                    <li>Design Thinking</li>
+                                    <li>Lean UX</li>
                                 </ul>
                                 <br>
                                 <h3>TOOLS</h3>
@@ -293,7 +294,7 @@
             </section>
         </header>
         <div id="contact" class="download">
-            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/Resume_eng.pdf">
+            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia_front-end_eng.pdf">
                 <p>Say hello: itsandromeda@gmail.com</p>
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Download my CV</button>
@@ -310,11 +311,6 @@
                 <li>
                     <a href="https://github.com/itsandromeda" target="_blank">
                         <i class="fa fa-github"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/itsandromeda/" target="_blank">
-                        <i class="fa fa-instagram"></i>
                     </a>
                 </li>
                 <li>
