--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | UX Developer egresada de Laboratoria en Lima, Perú.</title>
+    <title>Annia J. Flores | Front-end Developer egresada de Laboratoria en Lima, Perú.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -11,14 +11,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://itsandromeda.github.io/Portfolio/public/index.html">
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
-    <meta property="og:title" content="Annia J. Flores, UX Developer">
+    <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portafolio">
-    <meta property="og:description" content="UX Developer egresada de Laboratoria en Lima, Perú.">
+    <meta property="og:description" content="Front-end Developer egresada de Laboratoria en Lima, Perú.">
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
     <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
-    <meta name="twitter:description" content="UX Developer egresada de Laboratoria en Lima, Perú.">
+    <meta name="twitter:description" content="Front-end Developer egresada de Laboratoria en Lima, Perú.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index.html">
     <!-- Font Awesome -->
@@ -32,7 +32,7 @@
 <body>
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
-            <span class="nav-text">ANNIA J. FLORES | UX DEVELOPER JR.</span>
+            <span class="nav-text">ANNIA J. FLORES | Front-end DEVELOPER JR.</span>
             <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="Mi correo electrónico"><i class="fa fa-envelope-o"></i> ¡ESCRÍBEME! :)</a>
         </div>
     </nav>
@@ -60,8 +60,8 @@
                     <div class="home__logo">
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
-                    <p class="hidden-xs">UX DEVELOPER, LIMA - PERÚ</p>
-                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/Resume.pdf">
+                    <p class="hidden-xs">FRONT-END DEVELOPER, LIMA - PERÚ</p>
+                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia_front-end.pdf">
                         <button class="btn home__button" type="submit">Descargar CV</button>
                     </form>
                     <div id="jump" class="home__more animate-flicker hidden-sm hidden-md hidden-lg">
@@ -399,10 +399,9 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                <p>¡Hola! Mi nombre es Annia, soy una <em>UX Developer junior</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
+                                <p>¡Hola! Mi nombre es Annia, soy una <em>Front-end Developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
                                 <p>En la actualidad busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con el diseño y la tecnología. Soy una persona súper apasionada y comprometida con las metas que me trazo y son algunas de las cosas que me caracterizan, pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
                                 <p>Mi desempeño en Laboratoria fue bastante bueno, tengo la certeza de que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer y estoy segura que ese mindset me ayudó a obtener varios reconocimientos a lo largo del programa.</p>
-                                <p>Cuento con 6 meses de experiencia desarrollando proyectos web para empresas como Scotiabank, DepoSeguro y más.</p>
 
                                 <h3>Intereses</h3>
                                 <p>Me interesan mucho el diseño UX, las causas sociales y el emprendimiento. Laboratoria sigue siendo un gran soporte en mi carrera como Front end Developer y UX Designer ya que sigo llevando cursos de especialización con ellos.</p>
@@ -424,6 +423,8 @@
                                     <li>npm (package manager)</li>
                                     <li>SEO</li>
                                     <li>HTTP JSON &amp; consumo de APIs</li>
+                                    <li>Lean UX</li>
+                                    <li>Design Thinking</li>
                                 </ul>
                                 <br>
                                 <h3>TOOLS</h3>
@@ -464,7 +465,7 @@
             </section>
         </header>
         <div id="contact" class="download">
-            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/curriculum.jpg">
+            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia_front-end.pdf">
                 <p>Escríbeme: itsandromeda@gmail.com</p> 
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Descarga mi CV</button>
@@ -481,11 +482,6 @@
                 <li>
                     <a href="https://github.com/itsandromeda" target="_blank">
                         <i class="fa fa-github"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/itsandromeda/" target="_blank">
-                        <i class="fa fa-instagram"></i>
                     </a>
                 </li>
                 <li>
