--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -63,7 +63,7 @@
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
                     <p class="hidden-xs">FRONT-END DEVELOPER, LIMA - PERU</p>
-                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia_front-end_eng">
+                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia_front-end_eng.pdf">
                         <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
                     <div id="jump" class="home__more animate-flicker hidden-sm hidden-md hidden-lg">
