--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -179,7 +179,7 @@
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                         <br>
                         <div>
-                            <h3>Personality</strong></h3>
+                            <h3><strong>Personality</strong></h3>
                             <ul>
                                 <li>Determined</li>
                                 <li>Eye for detail</li>
@@ -327,12 +327,9 @@
             <a href="#" class="top footer-text">Go up</a>
             <span class="hidden-xs">ANNIA J.FLORES - 2017</span>
         </div>
-        </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bundle.js"></script>
 </body>
-
-</html>
 
 </html>
