--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -63,7 +63,7 @@
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
                     <p class="hidden-xs">UX DEVELOPER, LIMA - PERU</p>
-                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/resume.jpg">
+                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_eng.pdf">
                         <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
                     <div id="jump" class="home__more animate-flicker hidden-sm hidden-md hidden-lg">
@@ -179,11 +179,12 @@
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                         <br>
                         <div>
-                            <h3>Personality</strong></h3>
+                            <h3><strong>Personality</strong></h3>
                             <ul>
                                 <li>Determined</li>
                                 <li>Eye for detail</li>
                                 <li>Communicative</li>
+                                <li>Visual</li>
                                 <li>Collaborative</li>
                             </ul>
                             <h3>ACKNOWLEDGEMENTS</h3>
@@ -228,42 +229,43 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                <p>Hi! My name is Annia, I'm a <em>UX developer junior</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
+                                <p>Hi! My name is Annia, I'm a <em>UX developer Jr.</em> &amp; <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> graduate living in Lima, Peru.</p>
                                 <p>I'm currently looking to become a part of a team of entrepreneurs and visionaries determined to change the world with design and technology. I'm a very passionate and commited person with the goals I set to myself and those are some of the things that characterize me, I believe I would fit in perfectly in a design-driven team that works with agile methodologies, since it's what I've been trained for in the past months.</p>
                                 <p>My performance in Laboratoria has been pretty good, I believe that with a computer in my hands and an internet connection anything is possible, I can learn just about anything that I commit myself to and I think this kind of mindset really helped me get through the program with a few acknowledgements.</p>
-                                <p>I have a total of 6 months of experience developing web projects for companies such as Scotiabank, DepoSeguro and more.</p>
 
                                 <h3>Interests</h3>
-                                <p>I'm really interested in UX Design, social issues and entrepreneurship. Laboratoria is still a huge support in my career as a UX Designer and Web Developer since I'm taking courses with them to better my knowledge in the fields.</p>
-                                <p>Apart from that I have a huge love for music, design, photography and one of the platforms I use to share some of my other hobbies is Instagram, so you can find more of the things that inspire me right there.</p>
+                                <p>I'm really interested in UX Design, social issues and entrepreneurship. Laboratoria is still a huge support in my career, I'm currently taking UX courses to better my knowledge in the field.</p>
+                                <p>Apart from that I have a huge appreciation for music, design, photography and one of the platforms I use to share some of my other hobbies is Instagram, so you can find more of the things that inspire me right there.</p>
                             </div>
                             <div class="about-content col-md-5">
                                 <h3>SKILL SET</h3>
                                 <ul>
+                                    <li>Lean UX</li>
+                                    <li>Design Thinking</li>
+                                    <li>Scrum</li>
                                     <li>HTML5</li>
                                     <li>CSS3</li>
-                                    <li>SASS</li>
-                                    <li>BEM</li>
+                                    <li>SASS &amp; BEM</li>
                                     <li>JavaScript</li>
-                                    <li>ECMAScript 6</li>
                                     <li>jQuery &amp; AJAX</li>
                                     <li>Bootstrap</li>
                                     <li>Materialize</li>
                                     <li>Foundation</li>
                                     <li>npm (package manager)</li>
-                                    <li>SEO</li>
-                                    <li>HTTP JSON &amp; API requests</li>
+                                    <li>HTTP JSON &amp; consumo de APIs</li>
                                 </ul>
                                 <br>
                                 <h3>TOOLS</h3>
                                 <ul>
-                                    <li>Brackets</li>
+                                    <li>Sketch</li>
+                                    <li>Adobe XD</li>
+                                    <li>Figma</li>
+                                    <li>Marvel App</li>
+                                    <li>Adobe Illustrator</li>
+                                    <li>Adobe Photoshop</li>
                                     <li>Git</li>
                                     <li>GitHub</li>
                                     <li>Gulp</li>
-                                    <li>Heroku</li>
-                                    <li>Adobe XD</li>
-                                    <li>Illustrator</li>
                                 </ul>
                                 <h3>LANGUAGES</h3>
                                 <ul>
@@ -293,7 +295,7 @@
             </section>
         </header>
         <div id="contact" class="download">
-            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/Resume_eng.pdf">
+            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_eng.pdf">
                 <p>Say hello: itsandromeda@gmail.com</p>
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Download my CV</button>
@@ -313,11 +315,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/itsandromeda/" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
                     <a href="https://codepen.io/ItsAndromeda/" target="_blank">
                         <i class="fa fa-codepen"></i>
                     </a>
@@ -329,14 +326,11 @@
                 </li>
             </ul>
             <a href="#" class="top footer-text">Go up</a>
-            <span class="hidden-xs">ANNIA J.FLORES - 2017</span>
-        </div>
+            <span class="hidden-xs">ANNIA J.FLORES - 2018</span>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bundle.js"></script>
 </body>
-
-</html>
 
 </html>
