--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
-    <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
+    <meta name="twitter:title" content="Annia J. Flores, UX Developer">
     <meta name="twitter:description" content="UX Developer egresada de Laboratoria en Lima, Perú.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index.html">
@@ -61,7 +61,7 @@
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
                     <p class="hidden-xs">UX DEVELOPER, LIMA - PERÚ</p>
-                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/Resume.pdf">
+                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_es.pdf">
                         <button class="btn home__button" type="submit">Descargar CV</button>
                     </form>
                     <div id="jump" class="home__more animate-flicker hidden-sm hidden-md hidden-lg">
@@ -350,11 +350,12 @@
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                         <br>
                         <div>
-                            <h3>PERSONALIDAD</strong></h3>
+                            <h3><strong>PERSONALIDAD</strong></h3>
                             <ul>
                                 <li>Determinada</li>
                                 <li>Ojo para el detalle</li>
                                 <li>Comunicativa</li>
+                                <li>Visual</li>
                                 <li>Colaborativa</li>
                             </ul>
                             <h3>RECONOCIMIENTOS</h3>
@@ -399,42 +400,43 @@
                     <div class="about__short col-md-9">
                         <div class="col-md-12">
                             <div class="col-md-7">
-                                <p>¡Hola! Mi nombre es Annia, soy una <em>UX Developer junior</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
+                                <p>¡Hola! Mi nombre es Annia, soy una <em>UX Developer Jr.</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú.</p>
                                 <p>En la actualidad busco ser parte de un equipo de emprendedores y visionarios determinados a cambiar el mundo con el diseño y la tecnología. Soy una persona súper apasionada y comprometida con las metas que me trazo y son algunas de las cosas que me caracterizan, pienso que amoldarme un lugar impulsado por una cultura de diseño y metodologías ágiles sería lo ideal, ya que fui capacitada para ello.</p>
                                 <p>Mi desempeño en Laboratoria fue bastante bueno, tengo la certeza de que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer y estoy segura que ese mindset me ayudó a obtener varios reconocimientos a lo largo del programa.</p>
-                                <p>Cuento con 6 meses de experiencia desarrollando proyectos web para empresas como Scotiabank, DepoSeguro y más.</p>
 
                                 <h3>Intereses</h3>
-                                <p>Me interesan mucho el diseño UX, las causas sociales y el emprendimiento. Laboratoria sigue siendo un gran soporte en mi carrera como Front end Developer y UX Designer ya que sigo llevando cursos de especialización con ellos.</p>
+                                <p>Me interesan mucho el diseño UX, las causas sociales y el emprendimiento. Laboratoria sigue siendo un gran soporte en mi carrera ya que llevo cursos de especialización en UX Design en la actualidad.</p>
                                 <p>Muy aparte tengo gran afición por la música, diseño, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram, así que pueden ver más sobre las cosas que me inspiran ahí.</p>
                             </div>
                             <div class="about-content col-md-5">
                                 <h3>SKILL SET</h3>
                                 <ul>
+                                    <li>Lean UX</li>
+                                    <li>Design Thinking</li>
+                                    <li>Scrum</li>
                                     <li>HTML5</li>
                                     <li>CSS3</li>
-                                    <li>SASS</li>
-                                    <li>BEM</li>
+                                    <li>SASS &amp; BEM</li>
                                     <li>JavaScript</li>
-                                    <li>ECMAScript 6</li>
                                     <li>jQuery &amp; AJAX</li>
                                     <li>Bootstrap</li>
                                     <li>Materialize</li>
                                     <li>Foundation</li>
                                     <li>npm (package manager)</li>
-                                    <li>SEO</li>
                                     <li>HTTP JSON &amp; consumo de APIs</li>
                                 </ul>
                                 <br>
                                 <h3>TOOLS</h3>
                                 <ul>
-                                    <li>Brackets</li>
+                                    <li>Sketch</li>
+                                    <li>Adobe XD</li>
+                                    <li>Figma</li>
+                                    <li>Marvel App</li>
+                                    <li>Adobe Illustrator</li>
+                                    <li>Adobe Photoshop</li>
                                     <li>Git</li>
                                     <li>GitHub</li>
                                     <li>Gulp</li>
-                                    <li>Heroku</li>
-                                    <li>Adobe XD</li>
-                                    <li>Illustrator</li>
                                 </ul>
                                 <h3>IDIOMAS</h3>
                                 <ul>
@@ -464,7 +466,7 @@
             </section>
         </header>
         <div id="contact" class="download">
-            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/curriculum.jpg">
+            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/cv_es.pdf">
                 <p>Escríbeme: itsandromeda@gmail.com</p> 
                 <i class="fa fa-long-arrow-down animate-flicker"></i>
                 <button class="btn home__button" type="submit">Descarga mi CV</button>
@@ -484,11 +486,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/itsandromeda/" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                    </a>
-                </li>
-                <li>
                     <a href="https://codepen.io/ItsAndromeda/" target="_blank">
                         <i class="fa fa-codepen"></i>
                     </a>
@@ -500,8 +497,7 @@
                 </li>
             </ul>
             <a href="#" class="top footer-text">Volver arriba</a>
-            <span class="hidden-xs">ANNIA J.FLORES - 2017</span>
-        </div>
+            <span class="hidden-xs">ANNIA J.FLORES - 2018</span>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
